# second_brain_server

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Cargo.toml  Dockerfile  GUIDE.md  README.md  ROADMAP.md  TODO.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  justfile  second-brain.toml.example  setup-cron.sh  setup.sh  test-e2e-phase3.sh  test-e2e.sh  test-mcp-http.py
crates/sb-cli/: Cargo.toml
crates/sb-cli/src/: main.rs
crates/sb-core/: Cargo.toml
crates/sb-core/src/: config.rs  db.rs  file_search.rs  ingest.rs  lib.rs  lifecycle.rs  markdown.rs  models.rs  path_map.rs  project_detect.rs  project_sync.rs  worktree.rs
crates/sb-core/src/db/: chunks.rs  embeddings.rs  links.rs  notes.rs  projects.rs  queries.rs  settings.rs  skill_runs.rs  sync_state.rs  tags.rs  tasks.rs
crates/sb-core/tests/: db_integration.rs
crates/sb-embed/: Cargo.toml
crates/sb-embed/src/: chunker.rs  lib.rs  openai.rs  pipeline.rs  provider.rs  tei.rs
crates/sb-server/: Cargo.toml
crates/sb-server/src/: main.rs  tools.rs
crates/sb-skills/: Cargo.toml
crates/sb-skills/src/: context.rs  git_ops.rs  lib.rs  llm.rs  llm_anthropic.rs  runner.rs  skill.rs  time_period.rs
crates/sb-skills/src/skills/: connect_ideas.rs  contextualize.rs  continue_work.rs  mod.rs  reflect.rs  summarize.rs
crates/sb-sync/: Cargo.toml
crates/sb-sync/src/: lib.rs  processor.rs  watcher.rs
docs/: architecture.md
migrations/: 20260303000001_initial_schema.sql  20260304000001_lifecycle_and_provenance.sql  20260310000001_flexible_vector_dims.sql  20260313000001_canonical_paths.sql
