[workspace]
members = [
    "crates/sb-core",
    "crates/sb-server",
    "crates/sb-sync",
    "crates/sb-embed",
    "crates/sb-skills",
    "crates/sb-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/calebbarzee/second-brain"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for embedding APIs)
reqwest = { version = "0.12", features = ["json"] }

# Markdown parsing
pulldown-cmark = "0.12"

# MCP
rmcp = { version = "0.17", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
async-trait = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tempfile = "3"

# Workspace crates (internal)
sb-core = { path = "crates/sb-core" }
sb-embed = { path = "crates/sb-embed" }
sb-sync = { path = "crates/sb-sync" }
sb-skills = { path = "crates/sb-skills" }
