[package]
name = "sb-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sb"
path = "src/main.rs"

[dependencies]
sb-core.workspace = true
sb-embed.workspace = true
sb-skills.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
walkdir.workspace = true
