[package]
name = "sb-core"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
pgvector.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
pulldown-cmark.workspace = true
xxhash-rust.workspace = true
walkdir.workspace = true
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
