[package]
name = "sb-embed"
version.workspace = true
edition.workspace = true

[dependencies]
sb-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
uuid.workspace = true
sqlx.workspace = true
pgvector.workspace = true
