[package]
name = "sb-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "second-brain"
path = "src/main.rs"

[dependencies]
sb-core.workspace = true
sb-embed.workspace = true
sb-sync.workspace = true
sb-skills.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rmcp.workspace = true
schemars.workspace = true
uuid.workspace = true
chrono.workspace = true
walkdir.workspace = true
clap = { version = "4", features = ["derive"] }
