[package]
name = "sb-skills"
version.workspace = true
edition.workspace = true

[dependencies]
sb-core.workspace = true
sb-embed.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
