[package]
name = "sb-sync"
version.workspace = true
edition.workspace = true

[dependencies]
sb-core.workspace = true
sb-embed.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
notify = "7"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
